comments, basic styles, started profiles

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5590",
+  "proxy": "http://localhost:6004",
+  "secure": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
