--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.9",
     "react-mapbox-gl": "^4.8.6",
+    "react-rating-stars-component": "^2.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
